# RolVue

./: .replit  README.md  app.py  deletekeys.py  pyproject.toml  requirements.txt  soup.txt
static/: alreadyon.html  clubber.html  grades.html  privacy.html
static/css/: clubber.css  form.css  gstyles.css  loading.css  notification.css  style.css
static/js/: clubber.js  funcs.js  grades-script.js  script.js
templates/: login.html
